@@ -1,5 +1,8 @@
 2006-02-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* flower/include/std-vector.hh: make sure vsize and VPOS are
+	defined for binary_search_bounds().
+
 	* flower/std-string.cc (std): add to_string(long unsigned).
 
 	* configure.in (gui_b): excise std_string option.
